--- a/web/src/styles/settings.scss
+++ b/web/src/styles/settings.scss
@@ -739,6 +739,6 @@ display: none; /* Hidden by default */
   vertical-align: middle;
 }
 
-.v-data-table-footer{
-  display: none;
-}
+// .v-data-table-footer{
+//   display: none;
+// }
